--- a/api-guides/SEGURIDAD/routes_private_seguridad_GestionarRoles.yaml
+++ b/api-guides/SEGURIDAD/routes_private_seguridad_GestionarRoles.yaml
@@ -404,6 +404,13 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/StandardResponse'
+              example:
+                message: "Detalles del rol obtenidos exitosamente"
+                data:
+                  name: "Administrador"
+                  description: "Rol con permisos completos para la gestión de la parroquia y todos los módulos del sistema"
+                error: ""
+                traceback: ""
      
     put:
       tags:
@@ -479,11 +486,73 @@ paths:
                 $ref: '#/components/schemas/StandardResponse'
      
   /api/parish/roles/{roleId}/permissions:
+    get:
+      tags:
+        - Gestión de Roles (Permisos)
+      summary: Obtener Matriz de Permisos del Rol
+      description: Obtiene la matriz de permisos actual del rol, organizada por módulos y acciones (Ver, Añadir, Editar, Eliminar).
+      parameters:
+        - in: path
+          name: roleId
+          schema:
+            type: integer
+          description: ID del rol para consultar permisos.
+          required: true
+      responses:
+        '200':
+          description: Matriz de permisos obtenida exitosamente.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/StandardResponse'
+              example:
+                message: "Permisos del rol obtenidos exitosamente"
+                data:
+                  role_name: "Rol de Ejemplo 1"
+                  permissions_matrix:
+                    - module: "Actos litúrgicos"
+                      ver: false
+                      añadir: true
+                      editar: false
+                      eliminar: true
+                    - module: "Usuario"
+                      ver: true
+                      añadir: true
+                      editar: true
+                      eliminar: true
+                    - module: "Parroquia"
+                      ver: false
+                      añadir: true
+                      editar: false
+                      eliminar: true
+                    - module: "Seguridad"
+                      ver: false
+                      añadir: false
+                      editar: true
+                      eliminar: true
+                    - module: "Reservas"
+                      ver: true
+                      añadir: true
+                      editar: true
+                      eliminar: true
+                    - module: "Tipo de Documentos"
+                      ver: false
+                      añadir: true
+                      editar: true
+                      eliminar: false
+                    - module: "Aprobar parroquia"
+                      ver: false
+                      añadir: false
+                      editar: true
+                      eliminar: true
+                error: ""
+                traceback: ""
+
     put:
       tags:
         - Gestión de Roles (Permisos)
-      summary: Gestionar Permisos (Asignación/Revocación Masiva)
-      description: Asigna o revoca masivamente los permisos del sistema a un rol específico.
+      summary: Guardar Cambios en Matriz de Permisos
+      description: Guarda los cambios realizados en la matriz de permisos del rol (botón "Guardar" del modal).
       parameters:
         - in: path
           name: roleId
@@ -504,3 +573,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/StandardResponse'
+              example:
+                message: "Permisos del rol actualizados exitosamente"
+                data: {}
+                error: ""
+                traceback: ""
