--- a/api-guides/ACTOS/routes_private_actos_GestionarRequisitos.yaml
+++ b/api-guides/ACTOS/routes_private_actos_GestionarRequisitos.yaml
@@ -27,10 +27,19 @@ components:
           type: string
           description: Nombre del Evento Base (ej. Matrimonio).
           example: Matrimonio
-        chapel_name:
+
+    EventSummary:
+      type: object
+      description: Resumen simple de un evento para listados.
+      properties:
+        order_number:
+          type: integer
+          description: Número de orden en la lista (1, 2, 3, ...).
+          example: 1
+        event_name:
           type: string
-          description: Nombre de la Capilla.
-          example: Capilla San José
+          description: Nombre del Evento Base.
+          example: Matrimonio
 
     RequirementData:
       type: object
@@ -133,10 +142,6 @@ components:
           nullable: true
           description: Descripción o detalles del requisito.
           example: No mayor a 6 meses.
-        active:
-          type: boolean
-          description: Estado del requisito (Switch).
-          example: false
 
     StandardResponse:
       type: object
@@ -247,10 +252,42 @@ paths:
                 data:
                   - id: 50
                     event_name: Matrimonio
-                    chapel_name: Capilla San José
                   - id: 51
                     event_name: Bautizo
-                    chapel_name: Capilla San José
+                error: ""
+                traceback: ""
+
+  /api/acts/events/list:
+    post:
+      tags:
+        - Requisitos - Auxiliares
+      summary: Listar Eventos Disponibles
+      description: Obtiene una lista simple de eventos disponibles con número de orden y nombre del evento, para la selección de eventos en la gestión de requisitos.
+      requestBody:
+        required: false
+        content:
+          application/json:
+            schema:
+              type: object
+              properties: {}
+      responses:
+        '200':
+          description: Listado exitoso de eventos disponibles.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/StandardResponse'
+              example:
+                message: "Eventos disponibles obtenidos exitosamente"
+                data:
+                  - order_number: 1
+                    event_name: Matrimonio
+                  - order_number: 2
+                    event_name: Bautizo
+                  - order_number: 3
+                    event_name: Confirmación
+                  - order_number: 4
+                    event_name: Primera Comunión
                 error: ""
                 traceback: ""
 
@@ -469,40 +506,6 @@ paths:
                 $ref: '#/components/schemas/StandardResponse'
               example:
                 message: "Requisito eliminado exitosamente"
-                data: {}
-                error: ""
-                traceback: ""
-   
-  /api/acts/requirements/chapel/{id}/deactivate:
-    post:
-      tags:
-        - Gestión de Requisitos
-      summary: Dar de Baja/Desactivar un Requisito Específico (Baja Lógica)
-      description: Realiza una baja lógica (desactiva el campo 'active') del requisito. Requiere permiso DELETE_REQUIREMENT.
-      parameters:
-        - in: path
-          name: id
-          schema:
-            type: integer
-          description: ID del requisito a desactivar.
-          required: true
-      requestBody:
-        description: Cuerpo de la solicitud vacío (no se requiere body).
-        required: false
-        content:
-          application/json:
-            schema:
-              type: object
-              properties: {}
-      responses:
-        '200':
-          description: Requisito desactivado exitosamente.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/StandardResponse'
-              example:
-                message: "Requisito desactivado exitosamente"
                 data: {}
                 error: ""
                 traceback: ""
