--- a/api-guides/SEGURIDAD/routes_private_seguridad_GestionarCuentas.yaml
+++ b/api-guides/SEGURIDAD/routes_private_seguridad_GestionarCuentas.yaml
@@ -543,6 +543,13 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/StandardResponse'
+              example:
+                message: "Estado de la asociación actualizado exitosamente"
+                data:
+                  association_id: 12
+                  active: false
+                error: ""
+                traceback: ""
      
   /api/parish/associations/{associationId}:
     delete:
@@ -564,4 +571,11 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/StandardResponse'
+              example:
+                message: "Asociación laboral finalizada exitosamente"
+                data:
+                  association_id: 12
+                  end_date: "2025-10-06"
+                error: ""
+                traceback: ""
     
